<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleText">Heads or Tails?</string>
    <string name="headsButtonText">Heads</string>
    <string name="tailsButtonText">Tails</string>

    <string name="dieTitle">Die Simulator 1d6</string>
    <string name="diePrompt">Touch!</string>
    <string name="dieResults">You haven\'t rolled yet</string>

    <string name="CoinOption">Flip Coins</string>
    <string name="DieOption">Roll Dice</string>

</resources>
