<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DieActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dieTitle"
        android:layout_gravity="center"
        android:textSize="@dimen/title_text_size"
        android:inputType="none"
        android:textColor="@color/textViewColor"
        android:id="@+id/dieTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diePrompt"
        android:id="@+id/diePrompt"
        android:textSize="@dimen/resultTextSize"
        android:inputType="none"
        android:textColor="@color/textViewColor"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dieButton"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/die_one" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dieResults"
        android:id="@+id/dieResults"
        android:textSize="@dimen/resultTextSize"
        android:inputType="none"
        android:textColor="@color/textViewColor"
        android:layout_gravity="center" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dieResultGrid"
        android:layout_gravity="center"
        android:numColumns="2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

</LinearLayout>
