<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/coin_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleText"
        android:id="@+id/textView"
        android:inputType="none"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/textViewColor"
        android:layout_gravity="center"
        android:background="#7dffffff"/>

    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headsButtonText"
        android:textSize="20sp"
        android:id="@+id/headsButton"
        android:layout_marginTop="40dp"
        android:minWidth="150dp"
        android:minHeight="60dp"
        android:background="#ffbbbbbb" />

    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tailsButtonText"
        android:textSize="20sp"
        android:id="@+id/tailsButton"
        android:layout_marginTop="10dp"
        android:minWidth="150dp"
        android:minHeight="60dp"
        android:background="#ffbbbbbb" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a guess to find out"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/resultTextSize"
        android:background="@color/textBgColor"
        android:id="@+id/resultMessageText"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0 Guesses Correct"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/resultTextSize"
        android:background="@color/textBgColor"
        android:id="@+id/guessRatioText"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:0 Heads:Tails"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/resultTextSize"
        android:background="@color/textBgColor"
        android:id="@+id/flipRatioText"
        android:layout_marginTop="15dp" />

</LinearLayout>